# langtest

./: .gitignore  README.md  extract_code.py  pyproject.toml
examples/: auto_debug_application.py  debug_with_agent.py  dev_team_example.py  final_autonomous_fix.py  fullstack_web_service.py  fully_autonomous_debug.py  new_feature_requirements.txt  run_autonomous_update.py
generated_fullstack_service/: .gitignore  01_project_plan.md  02_code_implementation.md  03_qa_testing.md  04_documentation.md  05_final_deliverable.md  Makefile  README.md  README_QUICK_START.md  Tiltfile  docker-compose.yml
generated_fullstack_service/backend/: Dockerfile  go.mod  main.go
generated_fullstack_service/frontend/: Dockerfile  package-lock.json  package.json
generated_fullstack_service/frontend/public/: index.html
generated_fullstack_service/frontend/src/: App.js  App.test.js  index.css
generated_fullstack_service/k8s/: deployment.yaml
generated_fullstack_service/src/: App.js  App.test.js
src/langest/: __init__.py
src/langest/agents/: __init__.py  autonomous_debugger.py  autonomous_updater.py  devops_engineer.py  generated_fullstack_debug_agent.py  project_manager.py  qa_engineer.py  software_engineer.py  tech_writer.py
src/langest/graphs/: __init__.py  dev_team_graph.py  simple_graph.py
src/langest/tools/: __init__.py
tests/: __init__.py  test_dev_team.py
